[package]
name = "vigi"
version = "0.0.0"
description = "Browser for dalet, text, gemtext (gemini protocol included) with native support of txtdot proxy and local txtdot engines"
authors = ["artegoser"]
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "updater",
    "window-hide",
    "window-start-dragging",
    "window-close",
    "window-minimize",
    "window-show",
    "window-unminimize",
    "window-unmaximize",
    "window-maximize",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dalet = "1.0.0-pre.10"

tokio = { version = "1.39.2", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = [
    "ring",
] }

bytes = "1.7.1"

reqwest = "0.12.5"
tokio-gemini = "0.3.0"
url = "2.5.2"
mime = "0.3.17"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
